# ai-engineering-notebook

./: .coveragerc  .env.example  .gitignore  BROWSER_TESTING.md  QUALITY.md  README.md  mypy.ini  package-lock.json  package.json  playwright.config.mjs  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  vercel.json
03-projects/agentic-workflow-demo/: README.md  pyproject.toml
03-projects/agentic-workflow-demo/data/: backlog.json
03-projects/agentic-workflow-demo/evals/: cases.jsonl
03-projects/agentic-workflow-demo/src/agentic_workflow/: __init__.py  backlog.py  cli.py  evals.py  models.py  tools.py  workflow.py
03-projects/agentic-workflow-demo/tests/: test_workflow.py
03-projects/enablement-assistant/: README.md  pyproject.toml
03-projects/enablement-assistant/evals/: questions.jsonl
03-projects/enablement-assistant/src/enablement_assistant/: __init__.py  answer.py  cli.py  documents.py  evaluation.py  retrieval.py
03-projects/enablement-assistant/src/enablement_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
03-projects/enablement-assistant/tests/: test_assistant.py
03-projects/local-ai-lab-runner/: README.md  pyproject.toml
03-projects/local-ai-lab-runner/src/local_ai_lab_runner/: __init__.py  checks.py  cli.py  labs.py  runner.py
03-projects/local-ai-lab-runner/tests/: test_runner.py
03-projects/prompt-regression-runner/: README.md  pyproject.toml
03-projects/prompt-regression-runner/data/: cases.jsonl
03-projects/prompt-regression-runner/feedback/recorded/: support-triage-reviews.json
03-projects/prompt-regression-runner/prompts/: baseline-v1.md  structured-v2.md
03-projects/prompt-regression-runner/recorded/: baseline-v1.json  structured-v2.json
03-projects/prompt-regression-runner/src/prompt_regression/: __init__.py  cli.py  contract.py  dataset.py  feedback.py  live_openai.py  scoring.py
03-projects/prompt-regression-runner/tests/: test_prompt_regression.py
03-projects/streamflow-containerized-stream-processing/: README.md  pyproject.toml
03-projects/streamflow-containerized-stream-processing/docker/: airflow.Dockerfile  compose.yml  producer.Dockerfile
03-projects/streamflow-containerized-stream-processing/spark/jobs/: daily_summary.py  (+1 more)
03-projects/streamflow-containerized-stream-processing/tests/: test_quality.py
03-projects/streamflow-enterprise-analytics-pipeline/: README.md  pyproject.toml
03-projects/streamflow-enterprise-analytics-pipeline/config/: snowflake.env.example  snowflake.example.yml
03-projects/streamflow-enterprise-analytics-pipeline/docs/: dashboard_requirements.md  data_dictionary.md  runbook.md  snowflake_setup.md
03-projects/streamflow-enterprise-analytics-pipeline/powerbi/: measures.md
03-projects/streamflow-enterprise-analytics-pipeline/scripts/: export_dashboard_data.py  run_snowflake_pipeline.py  snowflake_smoke_test.py
03-projects/streamflow-enterprise-analytics-pipeline/tests/: reconciliation_checks.sql  test_phase2_contract.py
(+107 files in other folders)
