[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-workflow-demo"
version = "0.1.0"
description = "A deterministic backlog agent with typed tools, approval boundaries, traces, and behavioral evals."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
backlog-agent = "agentic_workflow.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
