[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-ai-lab-runner"
version = "0.1.0"
description = "A local readiness checker and checkpoint runner for AI engineering labs."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ai-lab-runner = "local_ai_lab_runner.cli:main"
