[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-regression-runner"
version = "0.1.0"
description = "A trainer-friendly runner for comparing prompt candidates against fixed structured-output cases."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
live = ["openai==2.38.0"]

[project.scripts]
prompt-regression = "prompt_regression.cli:main"
