[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "streamflow-phase-1"
version = "0.1.0"
description = "Containerized stream processing platform prototype with Redpanda, Spark, Airflow, and data quality checks."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
kafka = ["kafka-python>=2.0"]
spark = ["pyspark>=3.5"]

[project.scripts]
streamflow-producer = "streamflow.producer:main"

